tests/fixtures/invalid/pow_float_dict_bool.py
# Cannot call pow() with Float, Dict[str, int], Bool
x = pow(1.0, {"a": 1}, True)
